--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -29,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5"
   }
