--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.9",
     "next": "16.0.3",
+    "next-intl": "^4.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
