--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
     "sass": "^1.94.0",
+    "zod": "^4.1.12",
+    "zod-validation-error": "^5.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
